note that it is folded

--- a/Manual/openad.tex
+++ b/Manual/openad.tex
@@ -812,7 +812,7 @@ actions of the \lstinline{openad} script for reverse mode.}\label{fig:makeRevers
 \scriptsize\verbatiminput{oneMinuteReverseExplOutput.txt}
 \end{boxedminipage}
 \caption{Output of invoking \lstinline{make driverE} in \lstinline{$OPENADROOT/Examples/OneMinuteReverse} %$
-.}\label{fig:makeReverseOut}
+; we folded long lines.}\label{fig:makeReverseOut}
 \end{figure}
 By changing directory to \lstinline{$OPENADROOT/Examples/OneMinuteReverse} %$
 and invoking \\[1ex]
