more example sections

--- a/Manual/local.bib
+++ b/Manual/local.bib
@@ -176,3 +176,7 @@
   howpublished  = {\url{http://www.mcs.anl.gov/xaif}}
 } 
 
+@MISC {           umfpackWeb,
+  author        = {{UMFPACK}},
+  howpublished  = {\url{http://www.cise.ufl.edu/research/sparse/umfpack/}}
+} 
