various minor fixes

--- a/Manual/autodiff.bib
+++ b/Manual/autodiff.bib
@@ -21423,3 +21423,92 @@
 	url = "http://www.resonoelusono.com/gofen/UnifiedView.pdf"
 }
 
+@ARTICLE{
+	   Narayanan2010ADo,
+	title = "ADIC2: Development of a component source transformation system for differentiating C
+	   and C++",
+	journal = "Procedia Computer Science",
+	volume = "1",
+	number = "1",
+	pages = "1845 - 1853",
+	year = "2010",
+	note = "ICCS 2010",
+	issn = "1877-0509",
+	doi = "DOI: 10.1016/j.procs.2010.04.206",
+	url = "http://www.sciencedirect.com/science/article/pii/S1877050910002073",
+	author = "Sri Hari Krishna Narayanan and Boyana Norris and Beata Winnicka",
+	keywords = "ADIC2",
+	ad_area = "General",
+	ad_tools = "ADIC",
+	ad_theotech = "Forward Mode, Reverse Mode, Toolkits"
+}
+
+@ARTICLE{
+	   Narayanan2011SJC,
+	title = "Sparse Jacobian Computation Using ADIC2 and ColPack",
+	journal = "Procedia Computer Science",
+	volume = "4",
+	pages = "2115 - 2123",
+	year = "2011",
+	note = "Proceedings of the International Conference on Computational Science, ICCS 2011",
+	issn = "1877-0509",
+	doi = "DOI: 10.1016/j.procs.2011.04.231",
+	url = "http://www.sciencedirect.com/science/article/pii/S1877050911002894",
+	author = "Sri Hari Krishna Narayanan and Boyana Norris and Paul Hovland and Duc C. Nguyen and
+	   Assefaw H. Gebremedhin",
+	keywords = "ColPack",
+	ad_area = "Chemistry",
+	ad_tools = "ADIC",
+	ad_theotech = "Sparsity"
+}
+
+@ARTICLE{
+	   Bucker2011SoD,
+	author = "H. M. B{\"u}cker and E. Slusanschi",
+	title = "Second-order Derivatives of the General-purpose Finite Element Package {SEPRAN} via
+	   Source Transformation",
+	journal = "Mathematics and Computers in Simulation",
+	issn = "0378-4754",
+	pages = "2431--2439",
+	doi = "10.1016/j.matcom.2011.03.008",
+	abstract = "Second-order derivatives are crucial ingredients to a variety of numerical
+	   methods. Often, they are difficult to get with numerical differentiation by divided differencing.
+	   Automatic differentiation provides an alternative by a program transformation capable of evaluating
+	   Jacobians, Hessians, or higher-order derivatives of functions given in the form of computer
+	   programs. SEPRAN is a general-purpose finite element package written in Fortran~77 used in various
+	   scientific areas ranging from fluid dynamics to structural mechanics to electromagnetism. By
+	   transforming SEPRAN twice using the automatic differentiation tool ADIFOR, second-order derivatives
+	   are evaluated without truncation error. Numerical experiments are reported in which second-order
+	   derivatives of a flow field with respect to an inflow velocity are computed, demonstrating the
+	   feasibility of this approach.",
+	year = "2011",
+	volume = "81",
+	number = "11",
+	ad_tools = "ADIFOR",
+	ad_theotech = "Hessian"
+}
+
+@ARTICLE{
+	   Enciu2010ADf,
+	title = "Automatic Differentiation for Sensitivity Calculation in Electromagnetism:
+	   Application for Optimization of a Linear Actuator",
+	author = "P. Enciu and L. Gerbaud and F. Wurtz",
+	publisher = "IEEE Magnetics Society",
+	year = "2010",
+	journal = "IEEE Transactions on Magnetics",
+	volume = "47",
+	pages = "1238 -- 1241",
+	abstract = "Automatic differentiation (AD) is introduced as a powerful technique to compute
+	   derivatives of functions given in the form of computer programs in high-level programming languages
+	   such as FORTRAN, C, or C++. This paper applies AD to compute error-free gradients of electromagnetic
+	   device sizing models. Then, the obtained gradients are exploited in optimization to size
+	   electromagnetic devices by means of minimizing a cost function with constrained parameters and
+	   performances. Often, the electromagnetic devices models have to be described not only by analytical
+	   formulas, but also by algorithms. This paper proposes an electromagnetic model of a linear actuator
+	   dealing with implicit equations solved by numerical algorithms. The ADOL-C package is considered for
+	   automatic differentiation.",
+	ad_area = "Engineering",
+	ad_tools = "ADOL-C",
+	ad_theotech = "Reverse Mode"
+}
+
